# liveTransOverlay

./: .gitignore  README.md  build-windows.cmd  index.html  package-lock.json  package.json  run-dev-windows.cmd  run-dev.sh  run-windows.cmd  run.sh  vite.config.ts
scripts/: build-macos-debug.sh  build-windows.ps1  run-dev-windows.ps1  run-windows.cmd
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  macos_permissions.rs  main.rs  overlay_window.rs
src/components/: Icons.tsx
src/overlay/: OverlayText.tsx  OverlayWindow.tsx  overlay.css
src/routes/: ControlPanel.tsx  SettingsPage.tsx  TranscriptPage.tsx
src/services/: audioCapture.ts  diagnostics.ts  geminiLiveClient.ts  geminiTextClient.ts  pcmEncoder.ts  settingsStore.ts  smartLanguageDetector.ts  transcriptExport.ts  transcriptStore.ts
src/store/: appStore.ts  sessionStore.ts
src/types/: index.ts
src/utils/: language.ts  logger.ts
